[gd_scene load_steps=28 format=2]

[ext_resource path="res://logic/end_turn_button.gd" type="Script" id=1]
[ext_resource path="res://logic/game_over.gd" type="Script" id=2]
[ext_resource path="res://textures/ui/friend_body.png" type="Texture" id=3]
[ext_resource path="res://ui/ui.gd" type="Script" id=4]
[ext_resource path="res://debug/icon.png" type="Texture" id=5]
[ext_resource path="res://ui/ui.theme" type="Theme" id=6]
[ext_resource path="res://ui/actions_label.gd" type="Script" id=7]
[ext_resource path="res://ui/money_label.gd" type="Script" id=8]
[ext_resource path="res://textures/ui/gold.png" type="Texture" id=9]
[ext_resource path="res://debug/over.png" type="Texture" id=10]
[ext_resource path="res://debug/under.png" type="Texture" id=11]
[ext_resource path="res://ui/friend.gd" type="Script" id=12]
[ext_resource path="res://ui/font/secret_society_large.tres" type="DynamicFont" id=13]
[ext_resource path="res://ui/foresight_overlay.gd" type="Script" id=14]
[ext_resource path="res://textures/ui/actions.png" type="Texture" id=15]
[ext_resource path="res://ui/font/secret_society_sm.tres" type="DynamicFont" id=16]
[ext_resource path="res://ui/tooltip.theme" type="Theme" id=17]
[ext_resource path="res://textures/ui/heart.png" type="Texture" id=18]
[ext_resource path="res://ui/font/inter_normal.tres" type="DynamicFont" id=19]
[ext_resource path="res://textures/ui/eye_1.png" type="Texture" id=20]
[ext_resource path="res://ui/face.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=5]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="ViewportTexture" id=7]
flags = 5
viewport_path = NodePath("RightBar/Control/Friend/Viewport")

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Header:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/VBoxContainer/HBoxContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/VBoxContainer/OpenShopButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/VBoxContainer/TreasureLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "victory"
length = 3.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 0.406126, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VBoxContainer/Header:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 0.406126, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VBoxContainer/VBoxContainer/HBoxContainer2:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.6, 2.6 ),
"transitions": PoolRealArray( 1, 0.406126, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("VBoxContainer/VBoxContainer/OpenShopButton:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.8, 3.8 ),
"transitions": PoolRealArray( 1, 0.406126, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("VBoxContainer/VBoxContainer/TreasureLabel:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.2, 3.2 ),
"transitions": PoolRealArray( 1, 0.406126, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
mouse_filter = 2
theme = ExtResource( 6 )
script = ExtResource( 4 )

[node name="LoseText" type="Label" parent="."]
visible = false
margin_left = 403.0
margin_top = 111.0
margin_right = 682.0
margin_bottom = 189.0
text = "You lose! Press R to restart"
script = ExtResource( 2 )

[node name="BottomEdge" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_top = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.34902, 0.34902, 0.34902, 1 )

[node name="TopEdge" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
mouse_filter = 2
color = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="LeftEdge" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="ForesightOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 0.78
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.521569 )
script = ExtResource( 14 )

[node name="Label" type="Label" parent="ForesightOverlay"]
anchor_right = 1.0
margin_top = 16.0
custom_fonts/font = ExtResource( 13 )
text = "Choose One"
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ForesightOverlay"]
anims/fade_in = SubResource( 5 )
anims/fade_out = SubResource( 6 )

[node name="RightBar" type="ColorRect" parent="."]
unique_name_in_owner = true
anchor_left = 0.82
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.65098, 0.65098, 0.65098, 1 )

[node name="MarginContainer" type="MarginContainer" parent="RightBar"]
anchor_right = 1.0
anchor_bottom = 0.6

[node name="VBoxContainer" type="VBoxContainer" parent="RightBar/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 352.0

[node name="TurnPanel" type="PanelContainer" parent="RightBar/MarginContainer/VBoxContainer"]
margin_right = 128.0
margin_bottom = 110.0

[node name="VBoxContainer" type="VBoxContainer" parent="RightBar/MarginContainer/VBoxContainer/TurnPanel"]
margin_top = 10.0
margin_right = 128.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="RightBar/MarginContainer/VBoxContainer/TurnPanel/VBoxContainer"]
margin_right = 128.0
margin_bottom = 39.0
size_flags_horizontal = 3
alignment = 1

[node name="TurnsLabel" type="Label" parent="RightBar/MarginContainer/VBoxContainer/TurnPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 56.0
margin_bottom = 39.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.88
theme_type_variation = "BigLabel"
text = "4"
align = 2

[node name="TurnsProgress" type="TextureProgress" parent="RightBar/MarginContainer/VBoxContainer/TurnPanel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 64.0
margin_top = 3.0
margin_right = 96.0
margin_bottom = 35.0
rect_min_size = Vector2( 32, 32 )
size_flags_horizontal = 2
size_flags_vertical = 4
max_value = 1000.0
value = 1000.0
texture_under = ExtResource( 11 )
texture_progress = ExtResource( 10 )
fill_mode = 5
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="RightBar/MarginContainer/VBoxContainer/TurnPanel/VBoxContainer/HBoxContainer/TurnsProgress"]

[node name="Label" type="Label" parent="RightBar/MarginContainer/VBoxContainer/TurnPanel/VBoxContainer"]
margin_top = 47.0
margin_right = 128.0
margin_bottom = 90.0
text = "Turns until
Sunrise"
align = 1

[node name="ActionPanel" type="PanelContainer" parent="RightBar/MarginContainer/VBoxContainer"]
margin_top = 118.0
margin_right = 128.0
margin_bottom = 235.0

[node name="VBoxContainer" type="VBoxContainer" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel"]
margin_top = 10.0
margin_right = 128.0
margin_bottom = 107.0
custom_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel/VBoxContainer"]
margin_right = 128.0
margin_bottom = 39.0
alignment = 1

[node name="ActionsLabel" type="Label" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 53.0
margin_bottom = 39.0
theme_type_variation = "BigLabel"
text = "3"
align = 1
valign = 1
script = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 93.0
margin_bottom = 39.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3
texture = ExtResource( 15 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel/VBoxContainer"]
margin_top = 39.0
margin_right = 128.0
margin_bottom = 67.0
custom_constants/margin_top = 0

[node name="Label" type="Label" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel/VBoxContainer/MarginContainer"]
margin_left = 8.0
margin_right = 120.0
margin_bottom = 20.0
text = "Action(s)"
align = 1
valign = 1

[node name="Button" type="Button" parent="RightBar/MarginContainer/VBoxContainer/ActionPanel/VBoxContainer"]
margin_left = 19.0
margin_top = 67.0
margin_right = 109.0
margin_bottom = 97.0
focus_mode = 0
size_flags_horizontal = 4
enabled_focus_mode = 0
text = "End Turn"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="RightBar/MarginContainer/VBoxContainer"]
margin_top = 243.0
margin_right = 128.0
margin_bottom = 275.0

[node name="TextureRect" type="TextureRect" parent="RightBar/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="RightBar/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 40.0
margin_top = 6.0
margin_right = 128.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "2 gold"
valign = 1
script = ExtResource( 8 )

[node name="Control" type="Control" parent="RightBar"]
anchor_left = 0.02
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Friend" type="Sprite" parent="RightBar/Control"]
unique_name_in_owner = true
material = SubResource( 4 )
scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 3 )
offset = Vector2( 280, -400 )
script = ExtResource( 12 )

[node name="Sprite" type="Sprite" parent="RightBar/Control/Friend"]
visible = false
position = Vector2( 146, -390.909 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 20 )

[node name="Sprite2" type="Sprite" parent="RightBar/Control/Friend"]
position = Vector2( 236.909, -377.273 )
texture = SubResource( 7 )
flip_v = true

[node name="Viewport" type="Viewport" parent="RightBar/Control/Friend"]
size = Vector2( 1024, 1024 )
own_world = true
transparent_bg = true

[node name="Face3D" parent="RightBar/Control/Friend/Viewport" instance=ExtResource( 21 )]
unique_name_in_owner = true

[node name="Banner" type="ColorRect" parent="."]
visible = false
anchor_top = 0.37
anchor_right = 1.0
anchor_bottom = 0.6
mouse_filter = 2
color = Color( 0, 0, 0, 0.745098 )

[node name="OneLine" type="Label" parent="Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_type_variation = "MassiveLabel"
text = "Monster's Turn"
align = 1
valign = 1

[node name="TwoLine" type="VBoxContainer" parent="Banner"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Header" type="Label" parent="Banner/TwoLine"]
margin_top = 18.0
margin_right = 800.0
margin_bottom = 57.0
theme_type_variation = "BigLabel"
text = "Graveyard #6"
align = 1
valign = 1

[node name="Subtitle" type="Label" parent="Banner/TwoLine"]
margin_top = 65.0
margin_right = 800.0
margin_bottom = 85.0
text = "4 turns to sunrise"
align = 1
valign = 1

[node name="LevelStart" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.2
anchor_top = 0.861
anchor_right = 0.6
anchor_bottom = 0.943
alignment = 1

[node name="Button" type="Button" parent="LevelStart"]
margin_right = 156.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Configure Deck"

[node name="Button2" type="Button" parent="LevelStart"]
margin_left = 164.0
margin_right = 320.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Start Level"

[node name="GameOver" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.745098 )

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Header" type="Label" parent="GameOver/VBoxContainer"]
margin_top = 139.0
margin_right = 800.0
margin_bottom = 196.0
theme_type_variation = "MassiveLabel"
text = "The monster escaped!"
align = 1
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/VBoxContainer"]
margin_left = 292.0
margin_top = 204.0
margin_right = 508.0
margin_bottom = 310.0
size_flags_horizontal = 4

[node name="Button" type="Button" parent="GameOver/VBoxContainer/VBoxContainer"]
margin_right = 216.0
margin_bottom = 30.0
text = "Try again with same deck"

[node name="Button2" type="Button" parent="GameOver/VBoxContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 216.0
margin_bottom = 68.0
text = "Reconfigure deck (5G)"
icon = ExtResource( 5 )
icon_align = 2
expand_icon = true

[node name="Button3" type="Button" parent="GameOver/VBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 216.0
margin_bottom = 106.0
text = "Quit to title"

[node name="YouWin" type="ColorRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.745098 )

[node name="VBoxContainer" type="VBoxContainer" parent="YouWin"]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Header" type="Label" parent="YouWin/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 212.0
margin_right = 800.0
margin_bottom = 269.0
theme_type_variation = "MassiveLabel"
text = "You win!"
align = 1
valign = 2

[node name="VBoxContainer" type="VBoxContainer" parent="YouWin/VBoxContainer"]
margin_left = 316.0
margin_top = 277.0
margin_right = 484.0
margin_bottom = 387.0
size_flags_horizontal = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="YouWin/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 168.0
margin_bottom = 32.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="YouWin/VBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
stretch_mode = 6

[node name="GoldLabel" type="Label" parent="YouWin/VBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 40.0
margin_top = 6.0
margin_right = 168.0
margin_bottom = 26.0
size_flags_horizontal = 3
text = "Gold earned: 25"
valign = 1

[node name="TreasureLabel" type="Label" parent="YouWin/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_top = 40.0
margin_right = 168.0
margin_bottom = 72.0
rect_min_size = Vector2( 0, 32 )
text = "Treasure recovered: 0"
align = 1

[node name="OpenShopButton" type="Button" parent="YouWin/VBoxContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 80.0
margin_right = 168.0
margin_bottom = 110.0
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="YouWin"]
anims/RESET = SubResource( 1 )
anims/victory = SubResource( 2 )

[node name="Tooltip" type="HFlowContainer" parent="."]
visible = false
rect_min_size = Vector2( 400, 0 )
custom_constants/vseparation = 20
custom_constants/hseparation = 20

[node name="TileTooltip" type="PanelContainer" parent="Tooltip"]
margin_right = 137.0
margin_bottom = 134.0
mouse_filter = 2
size_flags_vertical = 4
theme = ExtResource( 17 )

[node name="VBoxContainer" type="VBoxContainer" parent="Tooltip/TileTooltip"]
margin_left = 2.0
margin_top = 2.0
margin_right = 135.0
margin_bottom = 132.0
custom_constants/separation = 4
alignment = 1

[node name="Label" type="Label" parent="Tooltip/TileTooltip/VBoxContainer"]
margin_right = 133.0
margin_bottom = 34.0
custom_fonts/font = ExtResource( 16 )
text = "Wall"

[node name="Health" type="GridContainer" parent="Tooltip/TileTooltip/VBoxContainer"]
margin_top = 38.0
margin_right = 133.0
margin_bottom = 130.0
columns = 2

[node name="NorthLabel" type="Label" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_right = 49.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 19 )
text = "North "
valign = 1

[node name="North" type="HBoxContainer" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_left = 53.0
margin_right = 133.0
margin_bottom = 20.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/North"]
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/North"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/North"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/North"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/North"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="SouthLabel" type="Label" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_top = 24.0
margin_right = 49.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 19 )
text = "South "
valign = 1

[node name="South" type="HBoxContainer" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_left = 53.0
margin_top = 24.0
margin_right = 133.0
margin_bottom = 44.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/South"]
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/South"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/South"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/South"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/South"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="EastLabel" type="Label" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_top = 48.0
margin_right = 49.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 19 )
text = "East "
valign = 1

[node name="East" type="HBoxContainer" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_left = 53.0
margin_top = 48.0
margin_right = 133.0
margin_bottom = 68.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/East"]
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/East"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/East"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/East"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/East"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="WestLabel" type="Label" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_top = 72.0
margin_right = 49.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 19 )
text = "West "
valign = 1

[node name="West" type="HBoxContainer" parent="Tooltip/TileTooltip/VBoxContainer/Health"]
margin_left = 53.0
margin_top = 72.0
margin_right = 133.0
margin_bottom = 92.0
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/West"]
margin_right = 16.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/West"]
margin_left = 16.0
margin_right = 32.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect3" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/West"]
margin_left = 32.0
margin_right = 48.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect4" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/West"]
margin_left = 48.0
margin_right = 64.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[node name="TextureRect5" type="TextureRect" parent="Tooltip/TileTooltip/VBoxContainer/Health/West"]
margin_left = 64.0
margin_right = 80.0
margin_bottom = 20.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 18 )
expand = true
stretch_mode = 6

[connection signal="pressed" from="YouWin/VBoxContainer/VBoxContainer/OpenShopButton" to="." method="_on_OpenShopButton_pressed"]
